--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,16 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: white;
 }
 
 body {
-  margin: 0;
+  margin: auto;
+  overflow-x: hidden;
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -44,6 +45,9 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+}
+button.active {
+  border: #747bff solid 2px;
 }
 button:hover {
   border-color: #646cff;
